added hp to buildings